--- a/app/src/main/res/drawable/buttonshape.xml
+++ b/app/src/main/res/drawable/buttonshape.xml
@@ -21,6 +21,6 @@
         />
     <stroke
         android:width="3dp"
-        android:color="#0077FF"
+        android:color="#0A5B98"
         />
 </shape>
