--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,13 +2,17 @@
 <resources>
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
+    <color name="textColorPrimary">#FFFFFF</color>
     <color name="colorAccent">#3395ff</color>
+
+    <color name="navigationBarColor">#000000</color>
 
     <color name="bg_screen1">#3395ff</color>
 
-    <color name="dot_dark_screen1">#2278d4</color>
+    <color name="windowBackground">#FFFFFF</color>
 
     <color name="dot_light_screen1">#93c6fd</color>
+    <color name="dot_dark_screen1">#2278d4</color>
 
     <array name="array_dot_active">
         <item>@color/dot_light_screen1</item>
