--- a/app/src/main/res/layout/activity_investment_guide_.xml
+++ b/app/src/main/res/layout/activity_investment_guide_.xml
@@ -10,14 +10,6 @@
         android:layout_height="wrap_content"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:layout_scrollFlags="scroll|enterAlways"
-            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
-
         <android.support.design.widget.TabLayout
             android:id="@+id/tabs"
             android:layout_width="match_parent"
@@ -55,17 +47,17 @@
         android:layout_alignParentEnd="true"
         android:background="@null"
         android:text="@string/Next"
-        android:textColor="@android:color/white" />
+        android:textColor="@android:color/black" />
 
     <Button
-        android:id="@+id/skip_button"
+        android:id="@+id/previous_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
         android:background="@null"
         android:text="@string/Skip"
-        android:textColor="@android:color/white" />
+        android:textColor="@android:color/black" />
 
     <FrameLayout
         android:id="@+id/fragment_container"
