--- a/app/src/main/res/layout/frag_investment_result.xml
+++ b/app/src/main/res/layout/frag_investment_result.xml
@@ -23,7 +23,7 @@
         android:layout_marginEnd="50dp" />
 
     <Button
-        android:id="@+id/previus_button"
+        android:id="@+id/previous_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
