--- a/app/src/main/res/layout/activity_investment_guide_.xml
+++ b/app/src/main/res/layout/activity_investment_guide_.xml
@@ -10,6 +10,14 @@
         android:layout_height="wrap_content"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar_actionbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="@color/colorPrimary"
+            app:layout_scrollFlags="scroll|enterAlways"
+            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
+
         <android.support.design.widget.TabLayout
             android:id="@+id/tabs"
             android:layout_width="match_parent"
@@ -48,7 +56,7 @@
         android:layout_height="1dp"
         android:alpha=".5"
         android:layout_above="@id/layoutDots"
-        android:background="@android:color/white" />
+        android:background="@color/bg_screen" />
 
     <Button
         android:id="@+id/next_button"
@@ -57,8 +65,7 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
         android:background="@null"
-        android:text="@string/Next"
-        android:textColor="@android:color/black" />
+        android:textColor="@color/textColorSecondary" />
 
     <Button
         android:id="@+id/previous_button"
@@ -67,8 +74,7 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
         android:background="@null"
-        android:text="@string/Skip"
-        android:textColor="@android:color/black" />
+        android:textColor="@color/textColorSecondary" />
 
     <FrameLayout
         android:id="@+id/fragment_container"
