--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,10 +3,12 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="textColorPrimary">#FFFFFF</color>
+    <color name="textColorSecondary">#000000</color>
     <color name="colorAccent">#3395ff</color>
 
     <color name="navigationBarColor">#000000</color>
 
+    <color name="bg_screen">#FFFFFF</color>
     <color name="bg_screen1">#3395ff</color>
 
     <color name="windowBackground">#FFFFFF</color>
