--- a/app/src/main/res/layout/activity_frontpage_.xml
+++ b/app/src/main/res/layout/activity_frontpage_.xml
@@ -9,121 +9,126 @@
     tools:layout_editor_absoluteY="25dp">
 
 
+
+
     <com.ogaclejapan.arclayout.ArcLayout
         android:id="@+id/arc_layout"
-        android:layout_width="0dp"
+        android:layout_width="252dp"
         android:layout_height="0dp"
-        app:arc_axisRadius="150dp"
+        app:arc_axisRadius="210dp"
         app:arc_color="#bfbfbf"
         app:arc_freeAngle="false"
-        app:arc_origin="center_horizontal"
-        app:arc_radius="150dp"
+        app:arc_origin="right"
+        app:arc_radius="210dp"
         app:arc_reverseAngle="false"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
 
         <ImageButton
-            android:id="@+id/contact_btn"
-
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:background="@drawable/buttonshape"
-
-            android:shadowColor="#A8A8A8"
-            android:shadowDx="0"
-            android:shadowDy="0"
-            android:shadowRadius="5"
-            android:text=""
-            android:textSize="30sp"
-            app:srcCompat="@drawable/ic_contact"
-            tools:layout_editor_absoluteX="197dp"
-            tools:layout_editor_absoluteY="289dp" />
-
-        <ImageButton
-            android:id="@+id/disp_btn"
-
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:background="@drawable/buttonshape"
-
-            android:shadowColor="#A8A8A8"
-            android:shadowDx="0"
-            android:shadowDy="0"
-            android:shadowRadius="5"
-            android:text=""
-            android:textSize="30sp"
-            app:srcCompat="@drawable/ic_bonds"
-            tools:layout_editor_absoluteX="111dp"
-            tools:layout_editor_absoluteY="44dp" />
-
-        <ImageButton
             android:id="@+id/settings_btn"
-
-            android:layout_width="60dp"
-            android:layout_height="60dp"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
             android:background="@drawable/buttonshape"
-
+            android:padding="15dp"
+            android:scaleType="centerCrop"
             android:shadowColor="#A8A8A8"
             android:shadowDx="0"
             android:shadowDy="0"
             android:shadowRadius="5"
-            android:text=""
-            android:textSize="30sp"
             app:srcCompat="@drawable/ic_settings"
             tools:layout_editor_absoluteX="187dp"
             tools:layout_editor_absoluteY="138dp" />
 
         <ImageButton
-            android:id="@+id/news_btn"
-
-            android:layout_width="60dp"
-            android:layout_height="60dp"
+            android:id="@+id/disp_btn"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
             android:background="@drawable/buttonshape"
-
+            android:padding="15dp"
+            android:scaleType="centerCrop"
             android:shadowColor="#A8A8A8"
             android:shadowDx="0"
             android:shadowDy="0"
             android:shadowRadius="5"
-            android:text=""
-            android:textSize="30sp"
+            app:srcCompat="@drawable/ic_bonds"
+            tools:layout_editor_absoluteX="111dp"
+            tools:layout_editor_absoluteY="44dp" />
+
+        <ImageButton
+            android:id="@+id/guide_btn"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:background="@drawable/buttonshapeguide"
+            android:padding="15dp"
+            android:scaleType="centerCrop"
+            android:shadowColor="#A8A8A8"
+            android:shadowDx="0"
+            android:shadowDy="0"
+            android:shadowRadius="5"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.498"
+            app:srcCompat="@drawable/ic_guide" />
+
+        <ImageButton
+            android:id="@+id/contact_btn"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:background="@drawable/buttonshape"
+            android:padding="15dp"
+            android:scaleType="centerCrop"
+            android:shadowColor="#A8A8A8"
+            android:shadowDx="0"
+            android:shadowDy="0"
+            android:shadowRadius="5"
+            app:srcCompat="@drawable/ic_contact"
+            tools:layout_editor_absoluteX="197dp"
+            tools:layout_editor_absoluteY="289dp" />
+
+        <ImageButton
+            android:id="@+id/news_btn"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:background="@drawable/buttonshape"
+            android:padding="15dp"
+            android:scaleType="centerCrop"
+            android:shadowColor="#A8A8A8"
+            android:shadowDx="0"
+            android:shadowDy="0"
+            android:shadowRadius="5"
             app:srcCompat="@drawable/ic_news"
             tools:layout_editor_absoluteX="151dp"
             tools:layout_editor_absoluteY="397dp" />
 
+
     </com.ogaclejapan.arclayout.ArcLayout>
 
-    <ImageButton
-        android:id="@+id/guide_btn"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:background="@drawable/buttonshapeguide"
-        android:shadowColor="#A8A8A8"
-        android:shadowDx="0"
-        android:shadowDy="0"
-        android:shadowRadius="5"
-        android:textSize="30sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.498"
-        app:srcCompat="@drawable/ic_guide" />
 
     <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:layout_marginHorizontal="5dp"
-        android:layout_marginTop="0dp"
+        android:id="@+id/imageView4"
+        android:layout_width="277dp"
+        android:layout_height="97dp"
+        android:layout_marginLeft="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/pension_consult_logo" />
+        app:srcCompat="@drawable/pensionconsult" />
 
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="145dp"
+        android:layout_height="221dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginTop="20dp"
+        app:layout_constraintBottom_toTopOf="@+id/imageView4"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.004"
+        app:srcCompat="@drawable/logo" />
 
 </android.support.constraint.ConstraintLayout>
