Frontpage done! ish

--- a/app/src/main/res/layout/activity_frontpage_.xml
+++ b/app/src/main/res/layout/activity_frontpage_.xml
@@ -9,17 +9,15 @@
     tools:layout_editor_absoluteY="25dp">
 
 
-
-
     <com.ogaclejapan.arclayout.ArcLayout
         android:id="@+id/arc_layout"
         android:layout_width="252dp"
         android:layout_height="0dp"
-        app:arc_axisRadius="210dp"
-        app:arc_color="#bfbfbf"
+        app:arc_axisRadius="200dp"
+        app:arc_color="#80FFFFFF"
         app:arc_freeAngle="false"
         app:arc_origin="right"
-        app:arc_radius="210dp"
+        app:arc_radius="200dp"
         app:arc_reverseAngle="false"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -130,5 +128,17 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.004"
         app:srcCompat="@drawable/logo" />
+
+    <ImageView
+        android:layout_width="142dp"
+        android:layout_height="274dp"
+        android:layout_marginStart="8dp"
+        android:background="@drawable/circle"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.498" />
 
 </android.support.constraint.ConstraintLayout>
