--- a/app/src/main/res/layout/single_item_news.xml
+++ b/app/src/main/res/layout/single_item_news.xml
@@ -1,42 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+    android:layout_width="match_parent" android:layout_height="@dimen/news_height">
 
       <TextView
           xmlns:android="http://schemas.android.com/apk/res/android"
           android:id="@+id/example_view"
           android:layout_width="match_parent"
-          android:text="title"
-          android:textSize="18dp"
+          android:layout_height="wrap_content"
+          android:textSize="18sp"
           android:textStyle="italic"
-          android:padding="16dp"
-          android:layout_height="wrap_content" />
+          android:gravity="center"
+          android:padding="16dp" />
 
 
       <ImageView
           android:id="@+id/imageViewPic"
           android:layout_width="64dp"
           android:layout_height="64dp"
+          android:layout_centerVertical="true"
           android:src="@drawable/pc_logo"/>
 
       <TextView
           android:id="@+id/title_view"
           android:layout_width="match_parent"
-          android:layout_height="wrap_content"
-          android:layout_toRightOf="@id/imageViewPic"
-          android:text="title"
-          android:textSize="16dp"
+          android:layout_height="60dp"
+          android:layout_toEndOf="@id/imageViewPic"
+          android:minLines="1"
+          android:maxLines="2"
+          android:textSize="16sp"
           android:padding="10dp"
-          android:textStyle="bold" />
+          android:textStyle="bold"
+          android:ellipsize="end"/>
 
       <TextView
           android:id="@+id/textViewDate"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
-          android:layout_below="@+id/title_view"
-          android:text="date"
-          android:textSize="12dp"
-          android:gravity="right"
+          android:layout_alignParentBottom="true"
+          android:layout_marginBottom="4dp"
+          android:layout_marginEnd="4dp"
+          android:textSize="12sp"
+          android:gravity="end"
           android:textStyle="italic"/>
 
   </RelativeLayout>
