--- a/app/src/main/res/layout/frag_investment_intro.xml
+++ b/app/src/main/res/layout/frag_investment_intro.xml
@@ -20,8 +20,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/Slide_title"
-            android:textColor="@android:color/white"
-            android:textSize="@dimen/slide_title"
+            android:textColor="@color/textColorPrimary"
+            android:textSize="30sp"
             android:textStyle="bold" />
 
         <TextView
@@ -32,8 +32,8 @@
             android:paddingRight="@dimen/desc_padding"
             android:text="@string/Slide_desc"
             android:textAlignment="center"
-            android:textColor="@android:color/white"
-            android:textSize="@dimen/slide_desc" />
+            android:textColor="@color/textColorPrimary"
+            android:textSize="16sp" />
 
     </LinearLayout>
 </RelativeLayout>
