--- a/app/src/main/res/layout/frag_investment_result.xml
+++ b/app/src/main/res/layout/frag_investment_result.xml
@@ -11,23 +11,7 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="150dp"
-        android:text="TextView" />
+        android:maxWidth="@dimen/tab_max_width"/>
 
-    <Button
-        android:id="@+id/next_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginBottom="36dp"
-        android:layout_marginEnd="50dp" />
-
-    <Button
-        android:id="@+id/previous_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignTop="@+id/next_button"
-        android:layout_marginStart="50dp" />
 
 </RelativeLayout>
