--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,16 +3,33 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+
     <dimen name="fab_margin">16dp</dimen>
-    <dimen name="dots_height">30dp</dimen>
-    <dimen name="dots_margin_bottom">20dp</dimen>
+
     <dimen name="img_width_height">120dp</dimen>
+
     <dimen name="slide_title">30dp</dimen>
     <dimen name="slide_desc">16dp</dimen>
     <dimen name="desc_padding">40dp</dimen>
+
     <dimen name="tab_max_width">264dp</dimen>
     <dimen name="tab_padding_bottom">16dp</dimen>
     <dimen name="tab_label">14sp</dimen>
     <dimen name="custom_tab_layout_height">72dp</dimen>
+
+    <dimen name="news_height">90dp</dimen>
+
+    <dimen name="question_margin_top">80dp</dimen>
+    <dimen name="question_max_height">180dp</dimen>
+    <dimen name="radio_margin_top_2">100dp</dimen>
+    <dimen name="radio_margin_top_3">85dp</dimen>
+    <dimen name="radio_margin_top_4">70dp</dimen>
+    <dimen name="radio_button_size">30dp</dimen>
+
+    <dimen name="elevation">5dp</dimen>
+
+    <dimen name="dots_height">30dp</dimen>
+    <dimen name="dots_margin_bottom">20dp</dimen>
+
 
 </resources>
