--- a/app/src/main/res/layout/activity_frontpage_.xml
+++ b/app/src/main/res/layout/activity_frontpage_.xml
@@ -8,9 +8,6 @@
     tools:context="dk.pension_consulting.Frontpage_Activity"
     tools:layout_editor_absoluteY="25dp">
 
-
-
-
     <ImageView
         android:id="@+id/semicirclered"
         android:layout_width="210dp"
@@ -150,21 +147,16 @@
         app:layout_constraintVertical_bias="0.393"
         app:srcCompat="@drawable/pensionconsult" />
 
-    <ImageView
-        android:id="@+id/imageView3"
+    <ImageButton
+        android:id="@+id/imageButton_logoRings"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="16dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/imageView4"
-        app:layout_constraintEnd_toStartOf="@+id/semicirclered"
-        app:layout_constraintHorizontal_bias="0.285"
+        android:background="@null"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"
         app:srcCompat="@drawable/logo" />
 
 
