--- a/app/src/main/res/layout/frag_investment_viewpager.xml
+++ b/app/src/main/res/layout/frag_investment_viewpager.xml
@@ -3,29 +3,30 @@
     android:id="@+id/content"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/bg_screen"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <android.support.design.widget.AppBarLayout
-        android:id="@+id/topPanel"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+    <ImageView
+        android:id="@+id/semicircleblue2"
+        android:layout_width="210dp"
+        android:layout_height="420dp"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="@dimen/activity_horizontal_margin"
+        android:background="@drawable/semicirclerightblue" />
 
-    <android.support.design.widget.TabLayout
-        android:id="@+id/tabs"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:tabMode="fixed"
-        app:tabGravity="fill"/>
-    </android.support.design.widget.AppBarLayout>
+
+    <ImageView
+        android:id="@+id/semicirclewhite2"
+        android:layout_width="190dp"
+        android:layout_height="380dp"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="@dimen/img_ring_margin"
+        android:background="@drawable/semicirclewhite" />
 
     <android.support.v4.view.ViewPager
         android:id="@+id/view_pager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/topPanel"
         android:layout_above="@id/progressBar"/>
 
     <ProgressBar
