--- a/app/src/main/res/layout-land/frag_investment_question.xml
+++ b/app/src/main/res/layout-land/frag_investment_question.xml
@@ -3,12 +3,17 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:gravity="center_vertical"
+        android:orientation="horizontal">
+
     <TextView
         android:id="@+id/question_textView"
         android:layout_width="wrap_content"
-        android:layout_height="@dimen/question_max_height"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="@dimen/question_margin_top"
+        android:layout_height="wrap_content"
         android:maxWidth="@dimen/tab_max_width"
         android:elevation="@dimen/elevation"
         android:textSize="22sp" />
@@ -16,9 +21,8 @@
     <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@id/question_textView"
-        android:layout_marginTop="@dimen/radio_margin_top_4"
+        android:layout_marginStart="@dimen/radio_marginstart"
+
         android:maxWidth="@dimen/tab_max_width"
         android:orientation="vertical">
 
@@ -58,5 +62,7 @@
             android:elevation="@dimen/elevation"
             android:buttonTint="@color/colorAccent" />
     </RadioGroup>
+
+    </LinearLayout>
 
 </RelativeLayout>
