--- a/app/src/main/res/layout/frag_investment_intro.xml
+++ b/app/src/main/res/layout/frag_investment_intro.xml
@@ -14,23 +14,23 @@
         <ImageView
             android:layout_width="@dimen/img_width_height"
             android:layout_height="@dimen/img_width_height"
-            android:src="@drawable/boobs" />
+            android:src="@drawable/pension_icon"/>
 
         <TextView
+            android:id="@+id/slide_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/Slide_title"
             android:textColor="@color/textColorPrimary"
-            android:textSize="30sp"
+            android:textSize="26sp"
             android:textStyle="bold" />
 
         <TextView
+            android:id="@+id/slide_desc"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:paddingLeft="@dimen/desc_padding"
             android:paddingRight="@dimen/desc_padding"
-            android:text="@string/Slide_desc"
             android:textAlignment="center"
             android:textColor="@color/textColorPrimary"
             android:textSize="16sp" />
