--- a/app/src/main/res/layout/frag_investment_question.xml
+++ b/app/src/main/res/layout/frag_investment_question.xml
@@ -7,19 +7,26 @@
         android:id="@+id/question_textView"
         android:layout_width="wrap_content"
         android:layout_height="@dimen/question_max_height"
-        android:layout_centerVertical="true"
-        android:layout_marginStart="@dimen/activity_vertical_margin"
+        android:layout_centerHorizontal="true"
+        android:layout_above="@id/CenterLine"
+        android:layout_marginBottom="@dimen/question_margin_none"
         android:maxWidth="@dimen/tab_max_width"
         android:elevation="@dimen/elevation"
-        android:text="aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa"
         android:textSize="22sp" />
+
+    <View
+        android:id="@+id/CenterLine"
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"/>
 
     <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toEndOf="@id/question_textView"
-        android:layout_marginStart="@dimen/radio_marginstart"
-        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@id/CenterLine"
+        android:layout_marginTop="@dimen/question_margin_normalscreen"
         android:maxWidth="@dimen/tab_max_width"
         android:orientation="vertical">
 
