--- a/app/src/main/res/layout/listview.xml
+++ b/app/src/main/res/layout/listview.xml
@@ -3,6 +3,22 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <ImageView
+        android:id="@+id/semicircleblue2"
+        android:layout_width="210dp"
+        android:layout_height="420dp"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="@dimen/activity_horizontal_margin"
+        android:background="@drawable/semicirclerightblue" />
+
+    <ImageView
+        android:id="@+id/semicirclewhite2"
+        android:layout_width="190dp"
+        android:layout_height="380dp"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="@dimen/img_ring_margin"
+        android:background="@drawable/semicirclewhite" />
+
     <ListView
         android:id="@+id/listView"
         android:layout_width="match_parent"
