--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,6 +7,7 @@
     <dimen name="fab_margin">16dp</dimen>
 
     <dimen name="img_width_height">120dp</dimen>
+    <dimen name="img_ring_margin">35dp</dimen>
 
     <dimen name="slide_title">30dp</dimen>
     <dimen name="slide_desc">16dp</dimen>
@@ -19,8 +20,13 @@
 
     <dimen name="news_height">90dp</dimen>
 
-    <dimen name="question_margin_top">80dp</dimen>
+    <dimen name="Info_margin">4dp</dimen>
+
+    <dimen name="question_margin_normalscreen">25dp</dimen>
+    <dimen name="question_margin_smallscreen">14dp</dimen>
+    <dimen name="question_margin_none">5dp</dimen>
     <dimen name="question_max_height">180dp</dimen>
+
     <dimen name="radio_margin_top_4">70dp</dimen>
     <dimen name="radio_button_size">30dp</dimen>
     <dimen name="radio_marginstart">70dp</dimen>
