--- a/app/src/main/res/layout/frag_contact.xml
+++ b/app/src/main/res/layout/frag_contact.xml
@@ -3,22 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-        <ImageView
-            android:id="@+id/semicircleblue"
-            android:layout_width="210dp"
-            android:layout_height="420dp"
-            android:layout_alignParentStart="true"
-            android:layout_marginTop="@dimen/activity_horizontal_margin"
-            android:background="@drawable/semicircleleftblue" />
-
-
-        <ImageView
-            android:id="@+id/semicirclewhite"
-            android:layout_width="190dp"
-            android:layout_height="380dp"
-            android:layout_alignParentStart="true"
-            android:layout_marginTop="@dimen/img_ring_margin"
-            android:background="@drawable/semicircleleftwhite" />
+        <include layout="@layout/ring_background_left"/>
 
 <ScrollView
     android:layout_width="wrap_content"
