--- a/app/src/main/res/layout/frag_investment_viewpager.xml
+++ b/app/src/main/res/layout/frag_investment_viewpager.xml
@@ -6,22 +6,7 @@
     android:background="@color/bg_screen"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <ImageView
-        android:id="@+id/semicircleblue2"
-        android:layout_width="210dp"
-        android:layout_height="420dp"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="@dimen/activity_horizontal_margin"
-        android:background="@drawable/semicirclerightblue" />
-
-
-    <ImageView
-        android:id="@+id/semicirclewhite2"
-        android:layout_width="190dp"
-        android:layout_height="380dp"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="@dimen/img_ring_margin"
-        android:background="@drawable/semicirclewhite" />
+    <include layout="@layout/ring_background_right"/>
 
     <android.support.v4.view.ViewPager
         android:id="@+id/view_pager"
