frontpage layout changes

--- a/app/src/main/res/layout-land/activity_frontpage_.xml
+++ b/app/src/main/res/layout-land/activity_frontpage_.xml
@@ -86,7 +86,7 @@
 
 
         <ImageButton
-            android:id="@+id/settings_btn"
+            android:id="@+id/news_btn"
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:background="@drawable/buttonshape"
@@ -96,12 +96,12 @@
             android:shadowDx="0"
             android:shadowDy="0"
             android:shadowRadius="5"
-            app:srcCompat="@drawable/ic_settings"
-            tools:layout_editor_absoluteX="187dp"
-            tools:layout_editor_absoluteY="138dp" />
+            app:srcCompat="@drawable/ic_news"
+            tools:layout_editor_absoluteX="151dp"
+            tools:layout_editor_absoluteY="397dp" />
 
         <ImageButton
-            android:id="@+id/advice_btn"
+            android:id="@+id/Info_btn"
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:background="@drawable/buttonshape"
@@ -111,9 +111,9 @@
             android:shadowDx="0"
             android:shadowDy="0"
             android:shadowRadius="5"
-            app:srcCompat="@drawable/ic_bonds"
-            tools:layout_editor_absoluteX="111dp"
-            tools:layout_editor_absoluteY="44dp" />
+            app:srcCompat="@drawable/ic_contact"
+            tools:layout_editor_absoluteX="197dp"
+            tools:layout_editor_absoluteY="289dp" />
 
         <ImageButton
             android:id="@+id/guide_btn"
@@ -136,7 +136,7 @@
             app:srcCompat="@drawable/ic_guide" />
 
         <ImageButton
-            android:id="@+id/Info_btn"
+            android:id="@+id/advice_btn"
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:background="@drawable/buttonshape"
@@ -146,12 +146,12 @@
             android:shadowDx="0"
             android:shadowDy="0"
             android:shadowRadius="5"
-            app:srcCompat="@drawable/ic_contact"
-            tools:layout_editor_absoluteX="197dp"
-            tools:layout_editor_absoluteY="289dp" />
+            app:srcCompat="@drawable/ic_advice"
+            tools:layout_editor_absoluteX="111dp"
+            tools:layout_editor_absoluteY="44dp" />
 
         <ImageButton
-            android:id="@+id/news_btn"
+            android:id="@+id/settings_btn"
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:background="@drawable/buttonshape"
@@ -161,9 +161,9 @@
             android:shadowDx="0"
             android:shadowDy="0"
             android:shadowRadius="5"
-            app:srcCompat="@drawable/ic_news"
-            tools:layout_editor_absoluteX="151dp"
-            tools:layout_editor_absoluteY="397dp" />
+            app:srcCompat="@drawable/ic_settings"
+            tools:layout_editor_absoluteX="187dp"
+            tools:layout_editor_absoluteY="138dp" />
 
 
     </com.ogaclejapan.arclayout.ArcLayout>
